--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertemuan 2
-    </title>
+    <title>Pertemuan 2</title>
 </head>
 <body>
     <h1>pertemuan 2</h1>
-    <p>pelatihan github hari  ke dua</p>
+    <p>
+        pelatihan github hari  ke dua
+        branch main
+    </p>
 </body>
 </html>
